--- a/src/app/opportunities/home/home.component.html
+++ b/src/app/opportunities/home/home.component.html
@@ -59,15 +59,13 @@
           [longitude]="lng"
           [zoom]="zoom"
           [disableDefaultUI]="false"
-          [zoomControl]="false"
-          (mapClick)="mapClicked($event)">
+          [zoomControl]="false">
           <agm-marker 
               *ngFor="let m of markers; let i = index"
               (markerClick)="clickedMarker(m)"
               [latitude]="m.lat"
               [longitude]="m.lng"
               [label]="m.label"
-              [markerDraggable]="m.draggable"
               (dragEnd)="markerDragEnd(m, $event)">
               
             <agm-info-window>
